syntax = "proto3";
package paxospb;

message ClientUpdate {
    // the unique identifier of the sending client.
    uint64 client_id = 1;
    // the unique identifier of this client's server.
    uint64 server_id = 2;
    // the client sequence number for this update.
    uint64 timestamp = 3;
    // the update being initiate by the client.
    bytes update = 4;
}

message ViewChange {
    // the unique identifier of the sending server.
    uint64 server_id = 1;
    // the view number this server is trying to install.
    uint64 attempted = 2;
}

message ViewChangeProof {
    // the unique identifier of the sending server.
    uint64 server_id = 1;
    // the last view number this server installed.
    uint64 installed = 2;
}

message Prepare {
    // the unique identifier of the sending server.
    uint64 server_id = 1;
    // the view number being prepared.
    uint64 view = 2;
    // the local aru value of the leader.
    uint64 local_aru = 3;
}

message PrepareOK {
    // the unique identifier of the sending server.
    uint64 server_id = 1;
    // the view number for which this message applies.
    uint64 view = 2;
    // the list of Proposals and GloballyOrderedUpdates.
    repeated uint64 data_list = 3;
}

message Proposal {
    // the unique identifier of the sending server.
    uint64 server_id = 1;
    // the view number in which this proposal is being made.
    uint64 view = 2;
    // the sequence number of this proposal.
    uint64 seq = 3;
    // the client update being bound to seq in this proposal.
    ClientUpdate update = 4;
}

message Accept {
    // the unique identifier of the sending server.
    uint64 server_id = 1;
    // the view number for which this message applies.
    uint64 view = 2;
    // the sequence number of the associated Proposal.
    uint64 seq = 3;
}

message GloballyOrderedUpdate {
    // the unique identifier of the sending server.
    uint64 server_id = 1;
    // the sequence number of the update that was ordered.
    uint64 seq = 2;
    // the client update bound to seq and globally ordered.
    ClientUpdate update = 3;
}
